# api/docs/swagger.json
@@ -66,6 +66,28 @@
                 ],
                 "responses": {}
             }
+        },
+        "/upload": {
+            "post": {
+                "description": "Uploads an image to the server",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Upload an image",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "Image file to upload",
+                        "name": "image",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
